added form schema, simple design mockup and loaders

--- a/client/src/app/globas.css
+++ b/client/src/app/globas.css
@@ -83,6 +83,7 @@
   }
 
   @layer components {
+    /* Basic Layout Structure */
     .padding-container{
       @apply p-6 md:p-12 lg:px-16 xl:py-16 xl:px-20;
     }
@@ -91,14 +92,60 @@
       @apply transition-all ease-in-out duration-100;
     }
 
+    .max-container {
+      @apply mx-auto max-w-[1440px];
+    }
+
+    /* End Basic Layout Structure */
+
+    /* Common Flex Classes */
+
+    .flexCenter {
+      @apply flex items-center justify-center;
+    }
+  
+    .flexStart {
+        @apply flex items-start justify-start;
+    }
+
+    .flexEnd {
+        @apply flex items-end justify-end;
+    }
+
+    .flexBetween {
+        @apply flex items-center justify-between;
+    }
+
+    .flexEvenly {
+        @apply flex items-center justify-evenly;
+    }
+
+    .flexAround {
+        @apply flex items-center justify-around;
+    }
+
+    .flexColCenter {
+        @apply flex flex-col justify-center;
+    }
+
+    .flexColStart {
+        @apply flex flex-col justify-start;
+    }
+
+    .flexColEnd {
+        @apply flex flex-col justify-end;
+    }
+
+    /* End Common Flex Classes */
+
     .bold-24 {
       @apply text-2xl font-bold;
     }
-    
+
     .bold-20 {
       @apply text-xl font-bold;
     }
-    
+
     .regular-18 {
       @apply text-lg font-medium;
     }
@@ -106,21 +153,21 @@
     .regular-bold-18 {
       @apply text-lg font-bold;
     }
-    
+
     .regular-16 {
-        @apply text-base font-normal;
+      @apply text-base font-normal;
     }
 
     .regular-bold-16 {
       @apply text-base font-bold;
     }
-    
+
     .regular-14 {
-        @apply text-sm font-normal;
+      @apply text-sm font-normal;
     }
-    
+      
     .regular-12 {
-        @apply text-xs font-normal;
+      @apply text-xs font-normal;
     }
   }
   
