style: created brand slider, fixed small design issues

--- a/client/src/app/globas.css
+++ b/client/src/app/globas.css
@@ -124,6 +124,14 @@
         @apply flex items-center justify-around;
     }
 
+    .flexInline {
+      @apply inline-flex items-center gap-x-2 md:gap-x-4;
+    }
+
+    .flexCol {
+      @apply flex flex-col;
+    }
+
     .flexColCenter {
         @apply flex flex-col justify-center;
     }
