Optimized back-end Caching and chalk logs, implemented UI changes and extracted wallet active accounts

--- a/client/src/app/globas.css
+++ b/client/src/app/globas.css
@@ -235,6 +235,10 @@
       @apply text-[#1C1C1CFF];
     }
 
+    .text-secondary-black {
+      @apply text-[#313131FF];
+    }
+
     /* Border Styles */
     .border-1 {
       @apply border border-solid;
